basic-docker-secrets-no-swarm/src/main/java/example/errors/MethodNotAllowedException.java
package example.errors;

class MethodNotAllowedException extends ApplicationException {

	MethodNotAllowedException(int code, String message) {
		super(code, message);
	}
}
